--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-validator": "^7.2.0",
     "mysql2": "^3.11.3",
     "pg": "^8.13.0",
     "pg-hstore": "^2.3.4",
